--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=movementtestxd
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Lvl_ThirdPerson.Lvl_ThirdPerson
-GameDefaultMap=/Game/ThirdPerson/Lvl_ThirdPerson.Lvl_ThirdPerson
+EditorStartupMap=/Game/Variant_Platforming/Lvl_Platforming.Lvl_Platforming
+GameDefaultMap=/Game/Variant_Platforming/Lvl_Platforming.Lvl_Platforming
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -15,7 +15,7 @@ GlobalDefaultServerGameMode=None
 r.Mobile.ShadingPath=0
 r.Mobile.AllowDeferredShadingOpenGL=False
 r.Mobile.SupportGPUScene=True
-r.Mobile.AntiAliasing=1
+r.Mobile.AntiAliasing=3
 r.Mobile.FloatPrecisionMode=0
 r.Mobile.AllowDitheredLODTransition=False
 r.Mobile.VirtualTextures=False
@@ -100,7 +100,7 @@ r.DefaultFeature.LocalExposure.ShadowContrastScale=0.800000
 r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.LensFlare=False
 r.TemporalAA.Upsampling=True
-r.AntiAliasingMethod=0
+r.AntiAliasingMethod=4
 r.MSAACount=4
 r.DefaultFeature.LightUnits=1
 r.DefaultBackBufferPixelFormat=4
