--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=movementtestxd
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Variant_Platforming/Lvl_Platforming.Lvl_Platforming
-GameDefaultMap=/Game/Variant_Platforming/Lvl_Platforming.Lvl_Platforming
+EditorStartupMap=/Game/Maps/Prototype/TestMap.TestMap
+GameDefaultMap=/Game/Maps/Prototype/TestMap.TestMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/SaveGame/BP_CustomGameMode.BP_CustomGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
